--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,8 @@
 body {
   font-family: 'Ubuntu', sans-serif!important;
+  position: relative;
+  min-height: 100vh;
+  padding-bottom: 4rem;    /* Footer height */
 }
 .jumbotron {
   background-color: #FDEFC1;
@@ -14,4 +17,26 @@ body {
 .connexion {
   max-width: 800px;
   margin: auto;
+}
+/* INSCRIPTION */
+.inscription {
+  max-width: 1500px;
+  margin: auto;
+  padding: 30px;
+  border-radius: 20px;
+  -webkit-box-shadow: 0px 6px 35px -27px rgba(0,0,0,0.36);
+  -moz-box-shadow: 0px 6px 35px -27px rgba(0,0,0,0.36);
+  box-shadow: 0px 6px 35px -27px rgba(0,0,0,0.36);
+}
+/* FOOTER */
+.footer	{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 4rem;            /* Footer height */
+  background-color: #FDEFC1;
+  text-align: center;
+}
+.footer  h5 {
+    margin-top: 20px;
 }
