--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@ body {
   font-family: 'Ubuntu', sans-serif!important;
   position: relative;
   min-height: 100vh;
-  padding-bottom: 4rem;    /* Footer height */
+  padding-bottom: 10rem;    /* Footer height */
 }
 .jumbotron {
   background-color: #FDEFC1;
@@ -31,12 +31,13 @@ body {
 /* FOOTER */
 .footer	{
   position: absolute;
+  font-family: 'Roboto Mono', monospace;
   bottom: 0;
   width: 100%;
-  height: 4rem;            /* Footer height */
+  height: 10rem;            /* Footer height */
   background-color: #FDEFC1;
   text-align: center;
 }
 .footer  h5 {
-    margin-top: 20px;
+    margin-top: 70px;
 }
