--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,6 +43,13 @@ body {
   -moz-box-shadow: 0px 6px 35px -27px rgba(0,0,0,0.36);
   box-shadow: 0px 6px 35px -27px rgba(0,0,0,0.36);
   height: 700px;
+  max-width: 700px;
+  margin: auto;
+}
+
+.moncompte-block1 form {
+  max-width: 600px;
+  margin: auto;
 }
 
 .moncompte-block2 {
@@ -52,6 +59,15 @@ body {
   box-shadow: 0px 6px 35px -27px rgba(0,0,0,0.36);
   overflow-y:scroll;
   height: 700px;
+  padding-top: 50px;
+  text-align: center;
+  max-width: 700px;
+  margin: auto;
+}
+
+.moncompte-block2 h1 {
+  padding-bottom: 40px;
+  padding-top: -50px;
 }
 
 /* FOOTER */
