--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,10 @@ body {
   position: relative;
   min-height: 100vh;
   padding-bottom: 10rem;    /* Footer height */
+  overflow-x: hidden;
 }
+
+
 .jumbotron {
   background-color: #FDEFC1;
   text-align: center;
@@ -20,7 +23,7 @@ body {
 }
 /* INSCRIPTION */
 .inscription {
-  max-width: 1500px;
+  max-width: 500px;
   margin: auto;
   padding: 30px;
   border-radius: 20px;
@@ -33,41 +36,66 @@ body {
 .photoProfil {
   display: block;
   margin: auto;
-  width: 150px;
+  width: 120px;
   border-radius: 145px;
 }
 
 .moncompte-block1 {
   border-radius: 20px;
-  -webkit-box-shadow: 0px 6px 35px -27px rgba(0,0,0,0.36);
-  -moz-box-shadow: 0px 6px 35px -27px rgba(0,0,0,0.36);
-  box-shadow: 0px 6px 35px -27px rgba(0,0,0,0.36);
+  -webkit-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.23);
+  -moz-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.23);
+  box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.23);
   height: 700px;
-  max-width: 700px;
-  margin: auto;
-}
-
-.moncompte-block1 form {
   max-width: 600px;
   margin: auto;
 }
 
+.moncompte-titre{
+  text-align: center;
+  margin: auto;
+  margin-bottom: 25px;
+}
+
+.moncompte-block1 form {
+  max-width: 365px;
+  margin: auto;
+  padding-top: 25px;
+}
+
+.moncompte-block1 form button {
+  margin-top: 25px;
+}
+
 .moncompte-block2 {
   border-radius: 20px;
-  -webkit-box-shadow: 0px 6px 35px -27px rgba(0,0,0,0.36);
-  -moz-box-shadow: 0px 6px 35px -27px rgba(0,0,0,0.36);
-  box-shadow: 0px 6px 35px -27px rgba(0,0,0,0.36);
-  overflow-y:scroll;
+  -webkit-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.23);
+  -moz-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.23);
+  box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.23);
+  overflow-y: scroll;
   height: 700px;
   padding-top: 50px;
   text-align: center;
-  max-width: 700px;
+  max-width: 600px;
   margin: auto;
 }
 
-.moncompte-block2 h1 {
-  padding-bottom: 40px;
-  padding-top: -50px;
+/* SCROLL BAR */
+.moncompte-block2::-webkit-scrollbar-track
+{
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+
+.moncompte-block2::-webkit-scrollbar
+{
+	width: 12px;
+	background-color: #F5F5F5;
+}
+
+.moncompte-block2::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	background-color: #fdefc1;
 }
 
 /* FOOTER */
