--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ body {
 }
 /* INSCRIPTION */
 .inscription {
-  max-width: 500px;
+  max-width: 750px;
   margin: auto;
   padding: 30px;
   border-radius: 20px;
@@ -45,7 +45,7 @@ body {
   -webkit-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.23);
   -moz-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.23);
   box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.23);
-  height: 700px;
+  height: 510px;
   max-width: 600px;
   margin: auto;
 }
@@ -56,13 +56,13 @@ body {
   margin-bottom: 25px;
 }
 
-.moncompte-block1 form {
+.moncompte-block1 > form {
   max-width: 365px;
   margin: auto;
   padding-top: 25px;
 }
 
-.moncompte-block1 form button {
+.moncompte-block1 > form > button {
   margin-top: 25px;
 }
 
@@ -72,7 +72,7 @@ body {
   -moz-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.23);
   box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.23);
   overflow-y: scroll;
-  height: 700px;
+  height: 510px;
   padding-top: 50px;
   text-align: center;
   max-width: 600px;
