--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,10 +41,7 @@ body {
 }
 
 .moncompte-block1 {
-  border-radius: 20px;
-  -webkit-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.23);
-  -moz-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.23);
-  box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.23);
+  border-radius: 5px;
   height: 510px;
   max-width: 600px;
   margin: auto;
@@ -67,10 +64,7 @@ body {
 }
 
 .moncompte-block2 {
-  border-radius: 20px;
-  -webkit-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.23);
-  -moz-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.23);
-  box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.23);
+  border-radius: 5px;
   overflow-y: scroll;
   height: 510px;
   padding-top: 50px;
@@ -82,7 +76,7 @@ body {
 /* SCROLL BAR */
 .moncompte-block2::-webkit-scrollbar-track
 {
-	border-radius: 10px;
+	border-radius: 5px;
 	background-color: #F5F5F5;
 }
 
@@ -96,6 +90,19 @@ body {
 {
 	border-radius: 10px;
 	background-color: #fdefc1;
+}
+
+.moncompte-block3 {
+  border-radius: 5px;
+  height: 510px;
+  padding-top: 50px;
+  text-align: center;
+  max-width: 600px;
+  margin: auto;
+}
+
+.moncompte-block3 > img {
+  width: 100px;
 }
 
 /* FOOTER */
