--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,8 +112,14 @@ body {
   text-align: center;
   margin: auto;
 }
-.degustation .form-group {
-
+.degustation-info-block {
+    min-width: 130px;
+    height: 180px;
+    margin: auto;
+    margin-bottom: 25px;
+    border: 1px solid lightgrey;
+    border-radius: 10px;
+    padding: 20px;
 }
 
 /* FROMAGE */
@@ -129,6 +135,10 @@ body {
   border: solid 1px #ebebec;
 }
 
+/* DEGUSTATION */
+.row-degustation {
+  /* max-width: 300px; */
+}
 /* FOOTER */
 .footer	{
   position: absolute;
