Add profil page and css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,6 +107,12 @@ body {
   width: 100px;
 }
 
+/* PROFIL */
+.profil {
+  max-width: 700px;
+  margin: auto;
+}
+
 /* DEGUSTATION */
 .degustation {
   text-align: center;
