--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,10 +5,10 @@ body {
   padding-bottom: 10rem;    /* Footer height */
   overflow-x: hidden;
 }
-input:valid {
+.pattern:valid {
   box-shadow: 0 0 2px 1px green;
 }
-input:invalid {
+.pattern:invalid {
   box-shadow: 0 0 2px 1px red;
 }
 
