--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,6 +140,13 @@ body {
   margin: auto;
 }
 
+/* PROFIL UTILISATEUR */
+/* .profil-utilisateur { */
+  /* max-width:800px;
+  margin: auto;
+  margin-bottom: 50px;
+} */
+
 /* DEGUSTATION */
 .degustation {
   text-align: center;
