--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,10 @@ body {
   overflow-x: hidden;
 }
 
+.hidden {
+  display: none!important;
+}
+
 .pattern:valid {
   box-shadow: 0 0 2px 1px green;
 }
@@ -136,7 +140,7 @@ body {
 
 /* PROFIL */
 .profil {
-  max-width: 700px;
+  max-width: 900px!important;
   margin: auto;
 }
 
