--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,14 @@ body {
   overflow-x: hidden;
 }
 
+
+.loader {
+  text-align: center;
+  margin-top: 50px;
+}
+
+
+
 /* FEED */
 .feed {
   width: max-content;
@@ -83,57 +91,32 @@ body {
   border-radius: 50%;
 }
 
-.moncompte-block1 {
-  border-radius: 5px;
-  height: 510px;
-  max-width: 600px;
-  margin: auto;
-}
-
 .moncompte-titre{
   text-align: center;
   margin: auto;
   margin-bottom: 25px;
 }
 
-.moncompte-block1 > form {
-  max-width: 365px;
+.moncompte-block {
+  border-radius: 5px;
+  height: 510px;
+  margin: auto;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+.moncompte-block > form {
+  max-width: 70%;
+  min-width: 40%;
   margin: auto;
   padding-top: 25px;
 }
 
-.moncompte-block1 > form > button {
+.moncompte-block > form > button {
   margin-top: 25px;
 }
 
-.moncompte-block2 {
-  border-radius: 5px;
-  overflow-y: scroll;
-  height: 510px;
-  padding-top: 50px;
-  text-align: center;
-  max-width: 600px;
-  margin: auto;
-}
 
-/* SCROLL BAR */
-.moncompte-block2::-webkit-scrollbar-track
-{
-	border-radius: 5px;
-	background-color: #F5F5F5;
-}
-
-.moncompte-block2::-webkit-scrollbar
-{
-	width: 12px;
-	background-color: #F5F5F5;
-}
-
-.moncompte-block2::-webkit-scrollbar-thumb
-{
-	border-radius: 10px;
-	background-color: #fdefc1;
-}
 
 .moncompte-block3 {
   border-radius: 5px;
